# gltf-renderer

./: .gitignore  .gitmodules  .nvim.lua  CMakeLists.txt  build.bat  resources.txt  run.bat  tags.bat  todo.txt
include/: arena.h  camera.h  defines.h  game_math.h  renderer.h  scene.h  shader.h  utils.h
shader/: postprocess.frag  postprocess.vert  shader.frag  shader.vert  taa.frag
src/: arena.cpp  camera.cpp  main.cpp  renderer.cpp  scene.cpp  shader.cpp  utils.cpp
